tests/baselines/reference/parserIfStatement1.d.errors.txt
parserIfStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserIfStatement1.d.ts(1,5): error TS2304: Cannot find name 'foo'.


==== parserIfStatement1.d.ts (2 errors) ====
    if (foo) {
    ~~
!!! error TS1036: Statements are not allowed in ambient contexts.
        ~~~
!!! error TS2304: Cannot find name 'foo'.
    }